--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Seccion Testimonios Interactiva</title>
+    <meta name="description" content="Seccion testimonios interactiva reutilizable para multiples proyectos. Hecha con ReactJS y TailwindCSS">
   </head>
   <body>
     <div id="root"></div>
